fix: tighten mobile sidebar and preview list spacing

--- a/src/client/styles/features/preview-markdown.css
+++ b/src/client/styles/features/preview-markdown.css
@@ -89,20 +89,17 @@
 
 .preview-content .task-list-item {
   list-style: none;
-  margin-left: calc(var(--space-6) * -1);
-  padding-left: var(--space-1);
-}
-
-.preview-content li > ul > .task-list-item,
-.preview-content li > ol > .task-list-item {
-  margin-left: 0;
+  position: relative;
 }
 
 .preview-content .task-list-item input[type='checkbox'] {
-  margin-right: var(--space-2);
+  position: absolute;
+  top: 0.3em;
+  left: calc(var(--space-5) * -1);
+  margin: 0;
   accent-color: var(--color-primary);
   cursor: pointer;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .preview-content blockquote {
