--- a/src/client/styles/layout/sidebar.css
+++ b/src/client/styles/layout/sidebar.css
@@ -49,7 +49,7 @@
   margin-left: auto;
 }
 
-.sidebar-close-btn {
+.ui-icon-button.sidebar-close-btn {
   display: none;
 }
 
